# Podles-DSP-Piano

./: .gitignore  RUN_VIRTUAL_DEMO.md
ESP=IDF/DSPIANO/: CMakeLists.txt
ESP=IDF/DSPIANO/main/: CMakeLists.txt  main.c
ESP=IDF/Piano DSP/main/: CMakeLists.txt  adc_sampler.c  adc_sampler.h  audio_dsp.c  audio_dsp.h  main.c
ESP_lights/main/: main.cpp  network.cpp
ESP_piano/: CMakeLists.txt
ESP_piano/main/: CMakeLists.txt  Kconfig.projbuild  audio_dsp.c  main.cpp
KiCad/firstTime/: firstTime.kicad_pro
KiCad/firstTime/_restore_backup_2026-06-02T21-52-39-494/: firstTime.kicad_sch
KiCad/firstTime/_restore_backup_2026-06-03T02-37-13-883/: firstTime.kicad_sch
final_bar_matching/: full_score_progress_tracker.js  simulator_browser_bundle.js
mobile/: App.tsx
server/: app.py
server/static/: showcase.html
tools/: synth_piano.py  virtual_venue.py
web/references_styles/: token.css
web_app/: final_bar_matching.browser.js
